--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       </div>
     </main>
     <footer></footer>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
