Added basic styles for header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Vocals in sentence</title>
   </head>
   <body>
-    <header></header>
+    <header><h1>Choose your function and enjoy!</h1></header>
     <main>
       <div class="mainContainer">
         <div>
