Added styles for footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,27 @@
         <div id="displayResult"></div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <ul class="socialLinks">
+        <li>
+          <a href="https://www.linkedin.com/in/nadiia-alaieva/" target="_blank"
+            ><img
+              class="socialLinkImg"
+              src="./images/footer/linkedin-icon.png"
+              alt="linkedin icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://github.com/tizzifona " target="_blank"
+            ><img
+              class="socialLinkImg"
+              src="./images/footer/github-icon.png"
+              alt="github icon"
+          /></a>
+        </li>
+      </ul>
+      <p>© 2024 Vocals in sentence Project</p>
+    </footer>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
