--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="./images/favicon.png"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Vocals in sentence</title>
   </head>
