Fixed text on the submitButton

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             <input class="textInput" id="textInput" type="text" />
           </label>
         </div>
-        <button class="submitButton" id="submitButton">
-          Want to see Result!
-        </button>
+        <button class="submitButton" id="submitButton">Show the result!</button>
 
         <div class="displayResult" id="displayResult">
           <img
